[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/images/Rec.png" type="Texture" id=6]
[ext_resource path="res://assets/img/images/Rectangle 3 (4).png" type="Texture" id=7]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
visible = false
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton2" type="Button" parent="."]
visible = false
margin_left = 1016.0
margin_top = 792.0
margin_right = 1390.0
margin_bottom = 839.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 256, 488 )
scale = Vector2( 1.10475, 1.00649 )
texture = ExtResource( 6 )
flip_h = true

[node name="Button" type="Button" parent="."]
margin_left = 736.0
margin_top = 256.0
margin_right = 1356.0
margin_bottom = 319.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = 184.0
margin_top = 8.0
margin_right = 442.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Apagar el equipo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
visible = false
margin_left = 736.0
margin_top = 256.0
margin_right = 1356.0
margin_bottom = 319.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button5"]
margin_left = 80.0
margin_top = 8.0
margin_right = 559.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = " ¡Esto no es lo que debes hacer!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 736.0
margin_top = 330.0
margin_right = 1356.0
margin_bottom = 393.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button2"]
margin_left = 87.9999
margin_top = 5.99997
margin_right = 562.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = " Reiniciar todas las aplicaciones"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
visible = false
margin_left = 736.0
margin_top = 330.0
margin_right = 1356.0
margin_bottom = 393.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button6"]
margin_left = 71.9999
margin_top = 5.99997
margin_right = 559.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = " ¡Esto no es lo que debes hacer!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 736.0
margin_top = 404.0
margin_right = 1356.0
margin_bottom = 467.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button3"]
margin_left = 31.9999
margin_top = 14.0
margin_right = 579.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = " Conectar el equipo a la red eléctrica"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="."]
visible = false
margin_left = 736.0
margin_top = 404.0
margin_right = 1356.0
margin_bottom = 467.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button7"]
margin_left = 232.0
margin_top = 12.0
margin_right = 379.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "¡Correcto!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 736.0
margin_top = 478.0
margin_right = 1356.0
margin_bottom = 541.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button4"]
margin_left = 120.0
margin_top = 9.99997
margin_right = 535.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = " Desconectar los periféricos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="."]
visible = false
margin_left = 736.0
margin_top = 478.0
margin_right = 1356.0
margin_bottom = 541.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button8"]
margin_left = 71.9999
margin_top = 9.99997
margin_right = 559.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = " ¡Esto no es lo que debes hacer!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 152.0
margin_top = 456.0
margin_right = 334.0
margin_bottom = 494.0
custom_fonts/font = SubResource( 3 )
text = "Bateria baja"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="NextButton2" to="." method="_on_NextButton2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
